# nothing-todo-app

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: .gitignore  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0f9581bccaef_main_tables_created.py
backend/app/app/: main.py
backend/app/app/api/: dependencies.py
backend/app/app/api/api_v1/: api_register.py
backend/app/app/api/api_v1/endpoints/: login.py  notes.py  tasks.py  tokens.py  user.py
backend/app/app/controllers/: __init__.py  base_controller.py  note_controller.py  task_controller.py  types.py  user_controller.py
backend/app/app/core/: security.py  settings.py
backend/app/app/db/: base_class.py  database_core.py
backend/app/app/mixins/: controller.py
backend/app/app/models/: __init__.py  note.py  task.py  user.py
backend/app/app/schemas/: __init__.py  base.py  note.py  task.py  token_data.py  user.py
backend/app/app/services/: annotations.py
backend/app/app/structs/: page.py
