[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.10.9"}
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
environs = "^9.5.0"
aiosqlite = "^0.19.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
